# aqualog-backend-api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build_container.yaml  bumpversion.yaml  docker-image.yml
alembic/: env.py
alembic/versions/: 20260717_000001_create_aquariums_table.py  20260719_000001_create_aquarium_measurements_table.py
aqualog_api/: app.py  aquarium_measurement_repository.py  aquarium_measurements.py  aquarium_repository.py  aquariums.py  auth.py  calculation.py  config.py  models.py
artifacts/tests/: index.html
docs/: api-framework.md
mail_proxy/: Dockerfile  index.js  package.json
openspec/: config.yaml
openspec/.cache/: context.json
openspec/approvals/: add-api-dockerfile.json
openspec/changes/add-aquarium-management-api/: design.md  proposal.md  tasks.md
openspec/changes/add-new-measurements/: proposal.md
openspec/changes/archive/2026-07-05-add-api-dockerfile/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-add-salinity-dose-endpoint/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-publish-test-coverage-results-at-coverage-url/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-persist-user-data/: tasks.md  (+2 more)
openspec/specs/api-aquarium-water-parameter-measurements/: spec.md
openspec/specs/api-container-image/: spec.md
openspec/specs/api-health-endpoints/: spec.md
openspec/specs/api-oauth2-authentication/: spec.md
openspec/specs/api-response-conventions/: spec.md
openspec/specs/api-salinity-dose-calculation/: spec.md
openspec/specs/api-service-bootstrap/: spec.md
openspec/specs/api-test-coverage-results-publishing/: spec.md
openspec/specs/api-test-results-publishing/: spec.md
openspec/specs/api-user-persistence/: spec.md
openspec/specs/api-user-profile/: spec.md
src/: __init__.py  app.py  aquarium_measurement_repository.py  aquarium_measurements.py  aquarium_repository.py  aquariums.py  auth.py  calculation.py  config.py  db.py  health.py  logging_middleware.py  models.py  profile.py  responses.py  user_repository.py  user_service.py
tests/: conftest.py  test_aquarium_measurement_repository.py  test_aquarium_measurements.py  test_aquarium_repository.py  test_aquariums.py  test_auth.py  test_auth_user_persistence.py  test_bootstrap.py  test_coverage_reports.py  test_health.py  test_profile.py  test_responses.py  test_salinity_dose.py  test_test_reports.py  test_user_repository.py
tools/: entrypoint.sh  get_token-dev.sh  setup.sh
tools/password/: .gitignore  provider-aqualog-api-example.sh
tools/spa/: .gitignore  test_script-spa-pkce.sh
useful_tools/: test.sh  test.sh.example
useful_tools/password/: test_script.sh
useful_tools/spa/: .gitignore  provider-aqualog-spa.example.sh
(+29 files in other folders)
