[project]
name = "aqualog-api"
version = "0.0.0"
description = "AquaLog Backend API"
authors = [
    {name = "Cylindric",email = "mark@hanfordonline.co.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "authlib==1.3.1",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "pydantic-settings==2.10.1",
    "uvicorn==0.35.0"
]

[project.optional-dependencies]
dev = [
    "commitizen==4.16.4",
    "pytest-cov==7.1.0",
    "pytest-html==4.2.0",
    "pytest==8.4.1"
]

[dependency-groups]
dev = [
    "commitizen (>=4.16.4,<4.17.0)"
]

[tool.poetry]
package-mode = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
