[project]
name = "aqualog-api"
version = "0.3.8"
description = "AquaLog Backend API"
authors = [
    {name = "Cylindric",email = "mark@hanfordonline.co.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "alembic~=1.17.1",
    "authlib~=1.7.2",
    "fastapi~=0.139.1",
    "httpx==0.28.1",
    "pydantic-settings~=2.14.2",
    "psycopg[binary]~=3.2.11",
    "sqlalchemy~=2.0.43",
    "uvicorn~=0.51.0",
    "starlette~=1.3.1"
]

[dependency-groups]
dev = [
    "commitizen (>=4.16.4,<4.17.0)",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pytest-html>=4.2.0,<5.0.0",
    "pytest~=9.0.3",
]

[tool.poetry]
package-mode = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
